syntax = "proto3";

option csharp_namespace = "test";

package user;

// The greeting service definition.
service User {
  // Sends a greeting
  rpc CreateUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string userName = 1;
  string password = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
}

message UserResponse {
  bool success = 1;
  string message = 2;
}